--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
